--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -38,8 +38,17 @@
 
 .firstPane,
 .secondPane {
-  width: 20%;
   height: 100%;
+}
+
+.firstPane
+{
+  width: 14rem;
+}
+
+.secondPane
+{
+  width: 14rem;
 }
 
 .thirdPane h2 {
@@ -51,7 +60,7 @@
 .firstPane,
 .secondPane,
 .thirdPane {
-  padding: 1.5%;
+  padding: 2rem;
   border-right: 1px solid rgba(119, 119, 119, 0.2);
   overflow-x: hidden;
   overflow-y: auto;
@@ -61,7 +70,7 @@
 }
 
 .thirdPane {
-  width: 60%;
+  width: 100%;
   height: 100%;
   font-size: 14px;
 }
