--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,7 @@
   /*  padding: 3rem 2rem;*/
   width: 100%;
   height: 100vh;
-  background-color: powderblue;
+  background-color: white;
 }
 
 .main {
